--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="landscape1">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="landscape2">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="landscape3">
+    </header>
+    <hr>
     
-</body>
-</html>
-
-<h1>Il mio Viaggio a Londra</h1>
+    
