{FEAT] Add 2 bridge image

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <h1>Il mio Viaggio a Londra</h1>
+        <h1><em>Il mio Viaggio a Londra</em></h1>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="landscape1">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="landscape2">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="landscape3">
     </header>
     <hr>
 
-    <h2>Le mie spese</h2>
+    <h2><em>Le mie spese</em></h2>
 
     <table>
         <thead>
@@ -51,7 +51,7 @@
     
     <hr>
 
-    <h3>Cose da fare</h3>
+    <h3><em>Cose da fare</em></h3>
 
     <ul>
         <li>Visitare la Tower of London&#10007;</li>
@@ -62,7 +62,7 @@
 
     <hr>
 
-    <h4>Info utili</h4>
+    <h4><em>Info utili</em></h4>
 
     <ol>
         <li>
@@ -91,3 +91,10 @@
     </ol>
     
     <hr>
+
+    <h3><em>Le foto</em></h3>
+    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millenium Bridge">
+    <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge">
+
+</body>
+</html>    
