--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <header>
-        <h1><em>Il mio Viaggio a Londra</em></h1>
+        <h1 style="color: rgb(254, 187, 0);"><em>Il mio Viaggio a Londra</em></h1>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="landscape1">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="landscape2">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="landscape3">
     </header>
     <hr>
 
-    <h2><em>Le mie spese</em></h2>
+    <h2 style="color: rgb(254, 187, 0);"><em>Le mie spese</em></h2>
 
     <table>
         <thead>
@@ -43,26 +43,26 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="2">Totale</td>
-                <td>360&euro;</td>
+                <td colspan="2"><mark>Totale</mark></td>
+                <td><mark>360&euro;</mark></td>
             </tr>
         </tfoot>
     </table>
     
     <hr>
 
-    <h3><em>Cose da fare</em></h3>
+    <h3 style=" color: rgb(254, 187, 0);"><em>Cose da fare</em></h3>
 
     <ul>
-        <li>Visitare la Tower of London&#10007;</li>
-        <li>Visitare greenwich&#10003;</li>
-        <li>Ascoltare un artista di strada a Covet Garden&#10003;</li>
-        <li>Mangiare il tipico Fish and Chips inglese&#10007;</li>
+        <li>Visitare la Tower of London&#128078;</li>
+        <li>Visitare greenwich&#128077;</li>
+        <li>Ascoltare un artista di strada a Covet Garden&#128077;</li>
+        <li>Mangiare il tipico Fish and Chips inglese&#128078;</li>
     </ul>
 
     <hr>
 
-    <h4><em>Info utili</em></h4>
+    <h4 style="color: rgb(254, 187, 0);"><em>Info utili</em></h4>
 
     <ol>
         <li>
@@ -84,15 +84,15 @@
         <li>
             Aereo
             <ul>
-                <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
-                <li><strong>Volo di Ritorno</strong>: YI236X, ore 18:30 da London Heathrow</li>
+                <li><strong>Volo di Andata</strong><mark>: YI234X,</mark>ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong><mark>: YI236X,</mark>>ore 18:30 da London Heathrow</li>
             </ul>
         </li>
     </ol>
     
     <hr>
 
-    <h3><em>Le foto</em></h3>
+    <h3 style="color: rgb(254, 187, 0);"><em>Le foto</em></h3>
     <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millenium Bridge">
     <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Tower Bridge">
 
