--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body background="./img/1812965.jpg">
     <header>
         <h1 style="color: rgb(254, 187, 0);"><em>Il mio Viaggio a Londra</em></h1>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="landscape1">
